<resources>
    <string name="app_name">Swoosh3</string>
    <string name="GoAllIn">GO ALL IN</string>
    <string name="OnGoingAllOut">On Going All Out</string>
    <string name="FindTeam">Find a team in your city and dominate the league</string>
    <string name="GetStarted">Get Started</string>
    <string name="DesiredLeague">Desired League</string>
    <string name="Mens">Mens</string>
    <string name="Womens">Womens</string>
    <string name="Coed">Coed</string>
    <string name="Next">Next</string>
    <string name="SwooshLogo">swooshlogo</string>
    <string name="desiredleague">Desired League</string>
    <string name="Background">Background</string>
    <string name="IamA">I am a</string>
    <string name="Beginner">Beginner</string>
    <string name="Baller">Baller</string>
    <string name="Finish">Finish</string>
    <string name="nextClicked">nextClicked</string>
    <string name="onMensClicked">onMensClicked</string>
    <string name="onWomensClicked">onWomensClicked</string>
    <string name="onCoedClicked">onCoedClicked</string>
    <string name="Exercise">Exercise</string>
    <string name="search_league">Looking for a coed beginner league near you...</string>
    <string name="onbeginclk">onBeginnerClicked</string>
    <string name="onballerclicked">onBallerClicked</string>
    <string name="onSkillFinishedClicked">onSkillFinishedClicked</string>
</resources>
