<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Controller.SkillActivity">

    <ImageView
            android:layout_width="0dp"
            android:layout_height="0dp" app:srcCompat="@drawable/beginnerballerbg"
            android:id="@+id/imageView4"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" android:scaleType="centerCrop"
            android:contentDescription="@string/Background"/>
    <ImageView
            android:layout_width="119dp"
            android:layout_height="68dp" app:srcCompat="@drawable/swooshlogo"
            android:id="@+id/imageView2"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp" android:layout_marginTop="24dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintHorizontal_bias="0.498"
            android:contentDescription="@string/SwooshLogo"/>
    <TextView
            android:text="@string/IamA"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView5" android:textColor="@android:color/white"
            android:fontFamily="@font/montserrat" android:textSize="18sp" android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/imageView2" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"/>
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp" android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/textView5">
        <ToggleButton
                android:text="@string/Beginner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/beginnerSkillBtn" android:layout_weight="1"
                android:background="@drawable/swoosh_toggle" android:fontFamily="@font/montserrat"
                android:textColor="@android:color/white" android:textOff="@string/Beginner"
                android:textOn="@string/Beginner" android:layout_marginEnd="16dp"
                android:contentDescription="@string/Beginner" android:onClick="@string/onbeginclk"/>
        <ToggleButton
                android:text="@string/Baller"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/ballerSkillBtn" android:layout_weight="1"
                android:background="@drawable/swoosh_toggle" android:fontFamily="@font/montserrat"
                android:textColor="@android:color/white" android:textOff="@string/Baller"
                android:textOn="@string/Baller" android:layout_marginStart="16dp"
                android:contentDescription="@string/Baller" android:onClick="@string/onballerclicked"/>
    </LinearLayout>
    <Button
            android:text="@string/Finish"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/skillFinishBtn" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp" android:layout_marginBottom="16dp"
            app:layout_constraintBottom_toBottomOf="@+id/imageView4" app:layout_constraintHorizontal_bias="0.498"
            android:textColor="@android:color/white" android:fontFamily="@font/montserrat"
            android:background="@drawable/swoosh_toggle" android:contentDescription="@string/Finish"
            android:onClick="@string/onSkillFinishedClicked"/>

</android.support.constraint.ConstraintLayout>